WIP - l2n intrinsics